added subscriptions table and controller
