# src/_dtos/index.ts
@@ -16,5 +16,7 @@ export * from './productCategories/dto';
 export * from './productCategories/entities';
 export * from './products/dto';
 export * from './products/entities';
+export * from './subscriptions/dto';
+export * from './subscriptions/entities';
 export * from './users/dto';
 export * from './users/entities';
