# types/types-from-prisma.ts
@@ -1,5 +1,7 @@
 // This file was auto-generated by prisma-generator-typescript-interfaces
 
+export type SubscriptionsType_enum = "news" | "blog";
+
 export interface main_config_model_type {
   id: string;
   config_key: string;
@@ -26,6 +28,7 @@ export interface users_model_type {
   created_at: Date;
   update_at: Date;
   orders?: orders_model_type[];
+  subscriptions?: subscriptions_model_type[];
 }
 
 export interface oauth_sessions_model_type {
@@ -145,6 +148,16 @@ export interface pre_orders_model_type {
   content: string | null;
   created_at: Date | null;
   updated_at: Date | null;
+}
+
+export interface subscriptions_model_type {
+  id: string;
+  user_id: string;
+  users?: users_model_type;
+  type: SubscriptionsType_enum;
+  created_at: Date | null;
+  updated_at: Date | null;
+  is_active: boolean | null;
 }
 
 type JsonValue = string | number | boolean | { [key in string]?: JsonValue } | Array<JsonValue> | null;
